<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    android:orientation="vertical">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/double_press" android:textStyle="bold" />
    <Spinner android:id="@+id/doubleMethod" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <EditText android:id="@+id/doubleUrl" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/url_hint" android:inputType="textUri" android:maxLines="1" />
    <TextView android:id="@+id/doubleResult" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/last_result_none" android:textIsSelectable="true" />
</LinearLayout>

